--- a/LeaveSystem.WebUI/LeaveSystem.WebUI.csproj
+++ b/LeaveSystem.WebUI/LeaveSystem.WebUI.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\NavController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
+    <Compile Include="Controllers\ProjectController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -243,6 +244,10 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\GetUser.cshtml" />
     <Content Include="Views\Home\ToGetUserData.cshtml" />
+    <Content Include="Views\Shared\_LayoutProject.cshtml" />
+    <Content Include="Views\Project\Index.cshtml" />
+    <Content Include="Views\Project\Details.cshtml" />
+    <Content Include="Views\Project\Edit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
