How access to the MDF file stored in App_Data folder

--- a/LeaveSystem.WebUI/Web.config
+++ b/LeaveSystem.WebUI/Web.config
@@ -13,6 +13,7 @@
   </configSections>
 
   <connectionStrings>
+    <!-- AttachDbFilename=|DataDirectory|\Accountdb.mdf; -->
     <add name="EFDbContext" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=LeaveSystem;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   
